crates/cockpitctl-cli/tests/snapshots/ingest_golden__all_sensors_skip_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `coverage` | ⏭ skip | no | `artifacts/coverage/report.json` |
| `perftest` | ⏭ skip | no | `artifacts/perftest/report.json` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Quality

- `coverage`: ⏭ skip · report `artifacts/coverage/report.json`
  - repro: `coverage run`
- `perftest`: ⏭ skip · report `artifacts/perftest/report.json`
  - repro: `perftest bench`

<!-- cockpit:end -->
