crates/cockpitctl-cli/tests/snapshots/ingest_golden__all_sensors_skip_report.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "cockpitctl",
    "version": "0.3.0"
  },
  "run": {
    "started_at": "2026-02-02T12:00:00Z"
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "coverage",
      "blocking": false,
      "missing": "skip",
      "presence": "present",
      "report_path": "artifacts/coverage/report.json",
      "verdict": {
        "status": "skip",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": [
          "no_baseline"
        ]
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "informational"
    },
    {
      "id": "perftest",
      "blocking": false,
      "missing": "skip",
      "presence": "present",
      "report_path": "artifacts/perftest/report.json",
      "verdict": {
        "status": "skip",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": [
          "no_baseline"
        ]
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "informational"
    }
  ],
  "highlights": [],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Quality",
      "Other"
    ],
    "sensors": [
      {
        "id": "coverage",
        "blocking": false,
        "missing": "skip",
        "section": "Quality",
        "repro": "coverage run"
      },
      {
        "id": "perftest",
        "blocking": false,
        "missing": "skip",
        "section": "Quality",
        "repro": "perftest bench"
      }
    ]
  }
}
