crates/cockpitctl-cli/tests/snapshots/ingest_golden__max_highlights_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `manychecker` | ❌ fail | yes | `artifacts/manychecker/report.json` |

### Highlights

(showing up to **3**)

1. ❌ **manychecker**: `manychecker.security_flaw` at `src/auth.rs:25` — Security vulnerability detected
2. ❌ **manychecker**: `manychecker.critical_issue` at `src/core.rs:10` — Critical error in core module
3. ⚠️ **manychecker**: `manychecker.deprecated_api` at `src/legacy.rs:50` — Using deprecated API call

### Annotations

1. ❌ **manychecker**: `manychecker.security_flaw` at `src/auth.rs:25` — Security vulnerability detected
2. ❌ **manychecker**: `manychecker.critical_issue` at `src/core.rs:10` — Critical error in core module
3. ⚠️ **manychecker**: `manychecker.deprecated_api` at `src/legacy.rs:50` — Using deprecated API call

### Policy

- `manychecker`: ❌ fail · report `artifacts/manychecker/report.json`
  - repro: `manychecker check`

<!-- cockpit:end -->
