crates/cockpitctl-cli/tests/snapshots/ingest_golden__max_highlights_report.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "cockpitctl",
    "version": "0.3.0"
  },
  "run": {
    "started_at": "2026-02-02T12:00:00Z"
  },
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 2,
      "warn": 2,
      "error": 2
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "manychecker",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/manychecker/report.json",
      "verdict": {
        "status": "fail",
        "counts": {
          "info": 2,
          "warn": 2,
          "error": 2
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "blocked"
    }
  ],
  "highlights": [
    {
      "sensor_id": "manychecker",
      "finding": {
        "severity": "error",
        "code": "manychecker.security_flaw",
        "message": "Security vulnerability detected",
        "location": {
          "path": "src/auth.rs",
          "line": 25
        },
        "fingerprint": "error002234567890abcdef1234567890abcdef1234567890abcdef12345678"
      }
    },
    {
      "sensor_id": "manychecker",
      "finding": {
        "severity": "error",
        "code": "manychecker.critical_issue",
        "message": "Critical error in core module",
        "location": {
          "path": "src/core.rs",
          "line": 10
        },
        "fingerprint": "error001234567890abcdef1234567890abcdef1234567890abcdef12345678"
      }
    },
    {
      "sensor_id": "manychecker",
      "finding": {
        "severity": "warn",
        "code": "manychecker.deprecated_api",
        "message": "Using deprecated API call",
        "location": {
          "path": "src/legacy.rs",
          "line": 50
        },
        "fingerprint": "warn001234567890abcdef1234567890abcdef1234567890abcdef123456780"
      }
    }
  ],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 3,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Repo contract",
      "Policy",
      "Other"
    ],
    "sensors": [
      {
        "id": "manychecker",
        "blocking": true,
        "missing": "fail",
        "section": "Policy",
        "repro": "manychecker check"
      }
    ]
  }
}
