crates/cockpitctl-cli/tests/snapshots/ingest_golden__no_findings_multi_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` |
| `coverage` | ✅ pass | yes | `artifacts/coverage/report.json` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json`
  - repro: `builddiag check`

### Coverage

- `coverage`: ✅ pass · report `artifacts/coverage/report.json`
  - repro: `coverage run`

<!-- cockpit:end -->
