crates/cockpitctl-cli/tests/snapshots/ingest_golden__schema_lax_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `quirky-sensor` | ✅ pass | yes | `artifacts/quirky-sensor/report.json` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Validation

- `quirky-sensor`: ✅ pass · report `artifacts/quirky-sensor/report.json`
  - repro: `quirky-sensor check`

<!-- cockpit:end -->
