crates/cockpitctl-cli/tests/snapshots/ingest_golden__schema_lax_report.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "cockpitctl",
    "version": "0.3.0"
  },
  "run": {
    "started_at": "2026-02-02T12:00:00Z"
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "quirky-sensor",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/quirky-sensor/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "allowed"
    }
  ],
  "highlights": [],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Validation",
      "Other"
    ],
    "sensors": [
      {
        "id": "quirky-sensor",
        "blocking": true,
        "missing": "fail",
        "section": "Validation",
        "repro": "quirky-sensor check"
      }
    ]
  }
}
