crates/cockpitctl-cli/tests/snapshots/ingest_golden__schema_strict_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `bad-sensor` | ❌ fail | yes | `artifacts/bad-sensor/report.json` |

### Highlights

(showing up to **7**)

1. ❌ **bad-sensor**: `cockpit.schema_violation` — Receipt for sensor `bad-sensor` at `artifacts/bad-sensor/report.json` does not conform to sensor.report.v1 schema: Additional properties are not allowed ('extra_not_allowed' was unexpected)

### Annotations

1. ❌ **bad-sensor**: `cockpit.schema_violation` — Receipt for sensor `bad-sensor` at `artifacts/bad-sensor/report.json` does not conform to sensor.report.v1 schema: Additional properties are not allowed ('extra_not_allowed' was unexpected)

### Validation

- `bad-sensor`: ❌ fail · report `artifacts/bad-sensor/report.json`
  - repro: `bad-sensor check --verify`

<!-- cockpit:end -->
