crates/cockpitctl-cli/tests/snapshots/ingest_golden__single_sensor_fail_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `secaudit` | ❌ fail | yes | `artifacts/secaudit/report.json` |

### Highlights

(showing up to **7**)

1. ❌ **secaudit**: `secaudit.sql_injection` at `src/db.rs:88` — SQL injection vulnerability in query builder

### Annotations

1. ❌ **secaudit**: `secaudit.sql_injection` at `src/db.rs:88` — SQL injection vulnerability in query builder

### Security

- `secaudit`: ❌ fail · report `artifacts/secaudit/report.json`
  - repro: `secaudit scan --strict`

<!-- cockpit:end -->
